<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <Button
        android:id="@+id/btnCreateClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/create_class" />

    <Button
        android:id="@+id/btnJoinClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/join_class" />

    <Button
        android:id="@+id/btnUploadFile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/upload_file" />

</LinearLayout>