<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <Button
        android:id="@+id/btnCopyClassCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/class_code" />

    <Button
        android:id="@+id/btnSeeMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/see_members" />

    <Button
        android:id="@+id/btnLeaveClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D9D9D9"
        android:textColor="@android:color/black"
        android:text="@string/leave_class"/>

</LinearLayout>