<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/custom_circle_button"
        android:contentDescription="@string/profile_picture" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!-- User Name -->
        <TextView
            android:id="@+id/tvUserNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <!-- Role Text (Teacher) -->
        <TextView
            android:id="@+id/tvRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textSize="11sp"
            android:textColor="@android:color/darker_gray"
            android:gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
