<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Challenges">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <View
        android:id="@+id/whiteRectangle"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Path navigation (Breadcrumbs) -->
    <LinearLayout
        android:id="@+id/pathNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical">

        <TextView
            android:id="@+id/firstLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Challenges"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>

    <TextView
        android:id="@+id/classText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/challenges"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="@font/crimson_text_semibold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/whiteRectangle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circleButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_circle_button"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/whiteRectangle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/firstCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/classText"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/fourPicOneWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_pic_1_word"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/secondCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/firstCardView"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiz"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        android:alpha="0.2"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical1"
        app:layout_constraintBottom_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>