<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_vertical1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline_horizontal"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <View
        android:id="@+id/whiteRectangle"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/fui_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Path navigation (Breadcrumbs) -->
    <LinearLayout
        android:id="@+id/pathNavigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical">

        <TextView
            android:id="@+id/firstLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:textColor="@android:color/black"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/classText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classs"
        android:textColor="#000000"
        android:textSize="25sp"
        android:fontFamily="@font/crimson_text_semibold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/whiteRectangle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/circleButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/custom_circle_button"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/whiteRectangle"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        android:alpha="0.2"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical1"
        app:layout_constraintBottom_toTopOf="parent"/>


    <!-- Scrollable CardView container -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/classText"
        app:layout_constraintBottom_toBottomOf="@id/guideline_horizontal"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical1">

        <LinearLayout
            android:id="@+id/cardContainer"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp" />
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/TODO"
        android:src="@drawable/baseline_add_24"
        android:backgroundTint="@color/red"
        app:tint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
